--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.86.0",
     "lucide-react": "^0.555.0",
-    "next": "15.0.3",
+    "next": "^15.5.6",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
